Edited wiki page RAD through web user interface.

--- a/wiki/RAD.wiki
+++ b/wiki/RAD.wiki
@@ -9,3 +9,5 @@ This is where we will upload all the different versions of the RAD
 
 Första versionen (2011-03-25)
 https://docs.google.com/document/pub?id=1TX2BtPqESC_yMJp6a1PDJjUtGjbACQJEiuO4axEeVvk
+Andra versionen (2011-03-31)
+https://docs.google.com/document/d/1Bz-ty7UuqRsXDpKNYCHgf3voYOPQM9vh-shj9VNhgkU/edit?hl=en_GB#
