--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -11,3 +11,5 @@
 - *Use cases* define use cases for new possible plugins
 
 - *Connections* Create some way for a client to assign a name to itself and send this to the server so that it always knows where to send a particular PluginCall and so that we can notify clients of other clients.
+
+- *SDD* Start working on
