--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -6,10 +6,10 @@
 
 - *RAD* Finish sections 2 (muck-ups) 
 
-- *view* Start on server view, Printz also has a proposition for a slightly change clientUI
-
 - *Use cases* define use cases for new possible plugins
 
 - *Connections* Create some way for a client to assign a name to itself and send this to the server so that it always knows where to send a particular PluginCall and so that we can notify clients of other clients.
 
-- *SDD* Start working on
+- *SDD* Complete
+
+- *Closing* Create some way to do a controlled closing of the application, closing streams and deleting temporary files.
