--- a/wiki/README_for_running.wiki
+++ b/wiki/README_for_running.wiki
@@ -1,16 +1,33 @@
 = How to set up the projects =
 
+It's important that you check out every folder in the trunk as an own project. That means that you should have these projects if you done it right:
+
+- Falcons AlarmPlugin
+- Falcons Client
+- Falcons DummyPlugin
+- Falcons Library
+- Falcons Pluginibrary
+- Falcons SendMessagePlugin
+- Falcons Server
+- Falcons TellstickPlugin
+- Falcons TicTacToePlugin
 
 = How to start the server =
 
+To start the server you run the Falcons Server project
 
 = How to start the client =
 
+To start the client you simple run the Falcons Client project
 
 = How to connect the client to the server =
 
+To connect the client to the server you enters the settings window in the client application and enters IP and Port (this should be localhost).
 
 = How to implement a plugin =
 
 
+
 = How to reconnect the client to the server =
+
+When you disconnect a concurrency issue 
