--- a/wiki/README_for_running.wiki
+++ b/wiki/README_for_running.wiki
@@ -3,13 +3,21 @@
 It's important that you check out every folder in the trunk as an own project. That means that you should have these projects if you done it right:
 
 - Falcons AlarmPlugin
+
 - Falcons Client
+
 - Falcons DummyPlugin
+
 - Falcons Library
+
 - Falcons Pluginibrary
+
 - Falcons SendMessagePlugin
+
 - Falcons Server
+
 - Falcons TellstickPlugin
+
 - Falcons TicTacToePlugin
 
 = How to start the server =
@@ -30,4 +38,5 @@ To connect the client to the server you enters the settings window in the client
 
 = How to reconnect the client to the server =
 
-When you disconnect a concurrency issue 
+When you disconnect from the server a concurrency issue occurs and we unfortunately don't know why after hours of debugging.
+This means that you have to restart the server before reconnecting.
