Edited wiki page README_for_running through web user interface.

--- a/wiki/README_for_running.wiki
+++ b/wiki/README_for_running.wiki
@@ -33,7 +33,7 @@ To start the client you simple run the Falcons Client project
 
 = How to connect the client to the server =
 
-To connect the client to the server you enters the settings window in the client application and enters IP and Port (this should be localhost).
+To connect the client to the server you open the settings window in the client application and enters IP and Port (this should be localhost).
 
 = How to load a plugin =
 
